Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11476] Some bad diagnostics for key path subscript arg contextual failures #53876

Closed
hamishknight opened this issue Sep 15, 2019 · 1 comment
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis

Comments

@hamishknight
Copy link
Collaborator

Previous ID SR-11476
Radar None
Original Reporter @hamishknight
Type Bug
Status Closed
Resolution Done
Environment

Swift version 5.1-dev (LLVM c5340df2d1, Swift 400fd19f79)
Target: x86_64-apple-darwin18.5.0

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, DiagnosticsQoI, TypeChecker
Assignee @hamishknight
Priority Medium

md5: 22999a69231bda1b663334814f3b0ffe

Issue Description:

The following produce some pretty bad diagnostics:

struct S {
  subscript(x: Int) -> Int { x }
}

func foo(_ fn: @escaping () -> Int) {
  var i: Int?
  _ = \S.[i] // error: '(@lvalue Int?) -> Int' is not convertible to '(Int) -> Int'

  _ = \S.[nil] // error: Type of expression is ambiguous without more context
  _ = \S.[fn] // error: '(@escaping () -> Int) -> Int' is not convertible to '(Int) -> Int'
}
@propertyWrapper
struct Wrapper<T> {
  var wrappedValue: T
}

struct R {
  @Wrapper
  var i: Int

  subscript(takesWrapper x: Wrapper<Int>) -> Int { x.wrappedValue }
  func bar() {
    _ = \Self.[takesWrapper: i] // error: Type of expression is ambiguous without more context
  }
}
@hamishknight
Copy link
Collaborator Author

Fixed by #27194

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

1 participant