[CS] Allow simplification of key path subscript arg locators

This allows a few fixes to properly emit
diagnostics for key path subscript argument
contextual failures.

Resolves SR-11476.